fixes on mobile version

--- a/src/app/homepage/shared/components/map/map.component.scss
+++ b/src/app/homepage/shared/components/map/map.component.scss
@@ -45,6 +45,6 @@
   }
   .map__wrapper {
     background-position: 34%;
-    min-height: 675px !important;
+    min-height: 705px !important;
   }
 }
