--- a/src/app/homepageru/shared/components/job-ru/job-ru.component.scss
+++ b/src/app/homepageru/shared/components/job-ru/job-ru.component.scss
@@ -142,6 +142,7 @@
 
 @media screen and (max-width: 428px) {
   .job__title {
+    text-align: center !important;
     font-size: 32px !important;
     line-height: 38px !important;
   }
