--- a/src/app/homepageru/shared/components/map-ru/map-ru.component.scss
+++ b/src/app/homepageru/shared/components/map-ru/map-ru.component.scss
@@ -45,7 +45,7 @@
   }
   .map__wrapper {
     background-position: 34%;
-    min-height: 675px !important;
+    min-height: 705px !important;
   }
   .map {
     padding-top: 50px !important;
